--- a/iWork.Web.UI/Template/Default/Controls/input/text.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/text.html
@@ -1,7 +1,6 @@
-﻿
-<control>
+﻿<control>
     <div class="form-group">
-        <label for="$iv-name" class="col-lg-3 control-label" data-i18n="$iv-model.$iv-name"></label>
+        <label for="$iv-name" class="col-lg-3 control-label">$iv-label</label>
         <div class="col-lg-6">
             <input type="text" class="form-control" name="$iv-name" id="$iv-name" placeholder="$iv-label" ng-model="$iv-model.$iv-name" />
         </div>
