--- a/iWork.Web.UI/Template/Default/Controls/form/form.html
+++ b/iWork.Web.UI/Template/Default/Controls/form/form.html
@@ -1,17 +1,26 @@
-﻿<control>
+﻿<control iv-redirecturl="" iv-title="Form Title">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title" data-i18n="general.$iv-title"></h3>
+            <h3 class="panel-title">$iv-title</h3>
         </div>
         <div class="panel-body" ng-controller="$iv-controller" onsubmit="return false;">
-            <form name="$iv-name" class="form-horizontal"><iv-content></iv-content></form>
+            <form name="$iv-name" class="form-horizontal">
+                <iv-content>
+                </iv-content>
+                <div class="alert alert-dismissable alert-danger" ng-show="isFormSubmitted && data.HasError">
+                    {{data.Message}}
+                </div>
+                <div class="alert alert-dismissable alert-success" ng-show="isFormSubmitted && !data.HasError">
+                    {{data.Message}}
+                </div>
+            </form>
         </div>
     </div>
     <script>
         function $iv-controller($scope, $location, $window, $http) {
             $scope.isFormSubmitted = false;
             $scope.formsubmit = function () {
-                $http.post(rootUrl + "$iv-controller/$iv-action", $scope.user).
+                $http.post(rootControllerUrl + "$iv-controller/$iv-action", $scope.$iv-model).
                 success(function (data, status, headers, config) {
                     $scope.isFormSubmitted = true;
                     $scope.data = data;
