--- a/iWork.Web.UI/Template/Default/Controls/button/submit.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/submit.html
@@ -1,7 +1,3 @@
 ﻿<control>
-    <div class="form-group">
-        <div class="col-lg-12">
-            <button type="submit" class="btn btn-primary btn-success btn-block" ng-click="formsubmit()">$iv-label</button>
-        </div>
-    </div>
+    <button type="submit" class="btn btn-primary btn-success" ng-click="formsubmit()">$iv-label</button>
 </control>
