--- a/iWork.Web.UI/Template/Default/Controls/view/column.html
+++ b/iWork.Web.UI/Template/Default/Controls/view/column.html
@@ -1,5 +1,5 @@
 ﻿<control>
-    <div class="col-md-$iv-size col-md-offset-4">
+    <div class="col-md-$iv-size">
         <iv-content></iv-content>
     </div>
 </control>
