--- a/iWork.Web.Api/ControllerGenerator.tt
+++ b/iWork.Web.Api/ControllerGenerator.tt
@@ -32,9 +32,12 @@ Namespace Controllers
 <# For each ctrl as Controller In api.controllers.Values #>
 	Public Interface I<#= ctrl.Name #>Controller
 		Inherits IController
-		<# For each action as Action In ctrl.Actions #>
+
+<# For each action as Action In ctrl.Actions #>
+		<Authorize(allowRoles:="<#= action.Authorization.AllowRoles #>", allowUsers:="<#= action.Authorization.AllowUsers #>", denyRoles:="<#= action.Authorization.DenyRoles #>", denyUsers:="<#= action.Authorization.DenyUsers #>")>
 		Function <#= action.Name #>(requestModel as <#= action.RequestModel #>) as <#= action.ResponseModel #>
-		<#	Next #>	
+
+<#	Next #>	
 	End Interface
 <#	Next #>
 
@@ -124,6 +127,14 @@ End Namespace
             action.ResponseModel = GetAttributeValue(controllerNode, "responsemodel")
             api.Controllers.Item(ctrlName).Actions.Add(action)
 			api.allactions.add(action)
+
+			Dim authorization As New Authorization
+			authorization.AllowRoles = GetAttributeValue(controllerNode, "allowroles")
+			authorization.DenyRoles = GetAttributeValue(controllerNode, "denyroles")
+			authorization.AllowUsers = GetAttributeValue(controllerNode, "allowusers")
+			authorization.DenyUsers = GetAttributeValue(controllerNode, "denyusers")
+			action.Authorization = authorization
+
         Next
 
 		For Each modelNode As XElement In rootNode.XPathSelectElements("./api/models/model[@name]").ToList
@@ -154,6 +165,7 @@ End Namespace
 		Public Property Name As String
 		Public Property RequestModel As String
 		Public Property ResponseModel As String
+		Public Property Authorization As Authorization
 	End Class
 	Public Class Api
 		Public Property Controllers As New Dictionary(Of String, Controller)
@@ -169,6 +181,12 @@ End Namespace
 	Public Class Prop
 		Public Property Name As String
 		Public Property Type As String
+	End Class
+	Public Class Authorization
+		Public Property AllowRoles As String
+		Public Property AllowUsers As String
+		Public Property DenyRoles As String
+		Public Property DenyUsers As String
 	End Class
 #>
 
