Adding DI to controller layer

--- a/iWork.Web.Api/ControllerGenerator.tt
+++ b/iWork.Web.Api/ControllerGenerator.tt
@@ -22,7 +22,8 @@
 
 #>
 Imports iWork.Core
-Imports iWork.Core.Controllers
+Imports iWork.Core.Web
+Imports iWork.Core.Web.Controllers
 
 Namespace Controllers	
 
