Implement Slick View

--- a/iWork.Web.UI/Template/Default/Controls/input/search.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/search.html
@@ -15,6 +15,7 @@
                    ng-change="$iv-change"
                    autofocus
                    />
+            <button iv-type="submit" iv-name="submit" iv-label="Go" />
         </div>
         <span class="search-box-message" >{{result.Message}}</span>
     </div>
