--- a/iWork.Web.UI/Template/Default/Controls/modal/modal.html
+++ b/iWork.Web.UI/Template/Default/Controls/modal/modal.html
@@ -3,19 +3,22 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
-                    <iv-content></iv-content>
+                    <iv-modalbody></iv-modalbody>
                 </div>
             </div>
         </div>
     </div>
     <script>
-        $('#$iv-modal-id').on('show.bs.modal', function (event) {
-            var button = $(event.relatedTarget)
-            var recipient = button.data('entity-id')
-            if ('$iv-form-modal' !== 'false' && recipient) {
-                var formController = $(this).find('.modal-body [ng-controller]')
-                angular.element(formController[0]).scope().formUpdate(recipient);
-            }
-        });
+        $('#$iv-modal-id').appendTo('body');
+        if ($iv-form-modal !== false) {
+            $('#$iv-modal-id').on('show.bs.modal', function (event) {
+                var button = $(event.relatedTarget)
+                var recipient = button.data('entity-id')
+                if ('$iv-form-modal' !== 'false' && recipient) {
+                    var formController = $(this).find('.modal-body [ng-controller]')
+                    angular.element(formController[0]).scope().formUpdate(recipient);
+                }
+            });
+        }
     </script>
 </control>
