--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -14,8 +14,7 @@
     <script type="text/javascript" src="/Content/lib/jquery.svginject.js"></script>
     <script src="/Content/js/page.js"></script>
     <script>
-        var rootControllerUrl = 'http://api.iwork.io/api/';
-        //var rootControllerUrl = 'http://localhost:11715/api/';
+        var rootControllerUrl = 'http://localhost:11715/api/';
     </script>
 </head>
 <body>
